tests/paczka2/big_fuzzy/25737078.err
Error in line 4: S362 S362 -2,3
Error in line 3: S362 S362 57,0
Error in line 8: OdzPat3 A839 67,5
Error in line 5: S362 S912 34,5
Error in line 10: OdzPat3 S362 31,6
Error in line 12: OdzPat3 A94 75,5
Error in line 11: S362 A839 69,9
Error in line 18: j4Y S362 1,5
Error in line 15: S362 A94 86,9
Error in line 13: OdzPat3 S362 36,8
Error in line 17: PodK S912 57,0
Error in line 39: JeXcb7 S912 1,7
Error in line 48: 5Tivr A94 25,0
Error in line 53: PodK S362 44,6
Error in line 54: OdzPat3 S362 43,9
Error in line 55: PodK A94 42,5
Error in line 56: OdzPat3 S912 59,3
Error in line 49: WNDn A839 60,0
Error in line 57: PodK S912 45,6
Error in line 67: PodK S912 68,52
Error in line 59: j4Y A839 92,4
Error in line 66: PodK A94 48,8
Error in line 70: WNDn A94 0,7
Error in line 74: PodK S912 29,3
Error in line 80: JeXcb7 S912 46,2
Error in line 85: JeXcb7 A94 43,5
Error in line 88: WNDn S362 93,8
Error in line 92: WNDn A839 86,4
Error in line 97: S362 S912 26,2
Error in line 99: j4Y S912 88,1
Error in line 100: JeXcb7 S362 0,4
Error in line 107: JeXcb7 A94 2,2
Error in line 109: OdzPat3 A94 55,2
Error in line 122: PodK A839 26,4
Error in line 145: WNDn A839 275,4
Error in line 142: PodK A94 4,8
Error in line 126: 5Tivr A839 65,9
Error in line 150: PodK S362 30,0
Error in line 165: PodK A94 72,8
Error in line 169: j4Y S362 22,0
Error in line 173: j4Y S912 18,1
Error in line 153: JeXcb7 S362 36,6
Error in line 179: JeXcb7 A94 23,4
Error in line 176: j4Y A839 267,2
Error in line 192: j4Y A94 82,0
Error in line 203: 5Tivr A94 8,2
Error in line 193: S362 A94 82,0
Error in line 210: S362 A839 50,8
Error in line 200: OdzPat3 S362 13,5
Error in line 213: JeXcb7 S362 80,4
Error in line 215: OdzPat3 A94 14,6
Error in line 216: WNDn S362 21,7
Error in line 217: JeXcb7 A94 13,7
Error in line 219: 5Tivr S362 97,4
Error in line 223: S362 A839 272,4
Error in line 221: OdzPat3 S912 90,9
Error in line 236: 5Tivr S912 6,0
Error in line 241: OdzPat3 A94 52,1
Error in line 246: OdzPat3 A839 18,8
